--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="wrapper">
+      <h1>Не скучай!</h1>
+      <ul class="list"></ul>
+      <button class="button">Чем заняться?</button>
+    </div>
+
     <script src="./app.js"></script>
   </body>
 </html>
